@@ -35,8 +35,8 @@ CREATE TABLE tx_standorte_domain_model_bibliothek (
     hidden tinyint(4) DEFAULT '0' NOT NULL,
     sigel varchar(3) DEFAULT '' NOT NULL,
     titel varchar(255) DEFAULT '' NOT NULL,
-    lat double(11,2) DEFAULT '0.00' NOT NULL,
-    lon double(11,2) DEFAULT '0.00' NOT NULL,
+    lat double(30,11) DEFAULT '0.00000000000' NOT NULL,
+    lon double(30,11) DEFAULT '0.00000000000' NOT NULL,
     bestand tinytext,
     strasse varchar(255) DEFAULT '' NOT NULL,
 	adresszusatz varchar(255) DEFAULT '' NOT NULL,
